# locust-grafana-prometheus

./: README.md
server/: app.py  docker-compose.yml  locustfile.py  pyproject.toml
