[project]
name = "locust-load-testing"
version = "0.1.0"
description = "Application for load testing web app and data collection and visualization with graffana and prometheus"
authors = [
    {name = "Allen",email = "alleny244@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "locust (>=2.38.1,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"

